--- a/android_project/app/src/main/res/layout/activity_main.xml
+++ b/android_project/app/src/main/res/layout/activity_main.xml
@@ -18,12 +18,14 @@
             android:id="@+id/imageView2"
             android:layout_width="match_parent"
             android:layout_height="309dp"
-            tools:srcCompat="@tools:sample/avatars" />
+            android:src="@drawable/logo" />
 
         <TextView
             android:id="@+id/textView3"
             android:layout_width="match_parent"
-            android:layout_height="58dp" />
+            android:layout_height="58dp"
+            android:text=""
+            android:textAppearance="@style/TextAppearance.AppCompat.Large" />
 
         <LinearLayout
             android:layout_width="match_parent"
