--- a/android_project/app/src/main/res/values/themes.xml
+++ b/android_project/app/src/main/res/values/themes.xml
@@ -12,5 +12,10 @@
         <!-- Status bar color. -->
         <item name="android:statusBarColor" tools:targetApi="l">?attr/colorPrimaryVariant</item>
         <!-- Customize your theme here. -->
+
+        <item name="windowActionBar">false</item>
+        <item name="windowNoTitle">true</item>
+        <!-- 상단 액션바를 지우는 소스 -->
     </style>
+
 </resources>
